style: update footer colors

--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -127,7 +127,7 @@
               </div>
               <div class="usa-width-one-third">
                 <div class="usa-media_block">
-                  <i class="fas fa-envelope-square fa-2x usa-media_block-img"></i>
+                  <i class="fas fa-envelope fa-2x usa-media_block-img"></i>
                   <div class="usa-media_block-body">
                     <h4>Contact us</h4>
                     <a href="mailto:info@openpdi.org">
