--- a/app/static/css/extra.css
+++ b/app/static/css/extra.css
@@ -50,13 +50,24 @@ blockquote p {
 }
 
 .usa-footer-secondary_section {
-    background-color: #e1f3f8;
+    background-color: #112e51;
+    color: #fff;
+}
+
+.usa-footer-secondary_section a:visited {
+    color: #fff;
 }
 
 .footer-section-bottom {
   background-color: #112e51;
   color: #868e96;
   padding: 2rem;
+  border-top-width: thin;
+  border-top-style: solid;
+  border-top-color: #405773;
+  border-bottom: 0;
+  margin-top: -1px;
+  margin-bottom: 0;
 }
 
 .footer-section-bottom a, .footer-section-bottom a:visited {
@@ -76,7 +87,7 @@ blockquote p {
 }
 
 .footer-contact-links a {
-    color: #205493;
+    color: #fff;
     text-decoration: underline;
 }
 
