refactor: drop donation info for now

--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -25,7 +25,7 @@
 
 <body id="container">
     <a class="usa-skipnav" href="#main-content">Skip to main content</a>
-
+<!-- GoFundMe
     <div class="site-banner-news">
         <p>
             <i class="fas fa-exclamation-circle"></i>
@@ -33,7 +33,7 @@
             to support further work on this project.
         </p>
     </div>
-
+-->
     <header class="usa-header usa-header-extended" role="banner">
         <div class="usa-navbar">
             <div class="usa-logo" id="extended-logo">
@@ -71,9 +71,11 @@
                             <li>
                                 <a href="https://github.com/OpenPDI/openpdi.org/milestones">Roadmap</a>
                             </li>
+                            <!-- GoFundMe
                             <li>
                                 <a href="">Donate</a>
                             </li>
+                            -->
                             <li>
                                 <a href="mailto:info@openpdi.org">info@openpdi.org</a>
                             </li>
@@ -116,6 +118,18 @@
               </div>
               <div class="usa-width-one-third">
                 <div class="usa-media_block">
+                  <i class="fab fa-github fa-2x usa-media_block-img"></i>
+                  <div class="usa-media_block-body">
+                    <h4>Have a question?</h4>
+                    <a href="https://github.com/OpenPDI/openpdi.org/issues/new">
+                      Open an issue on GitHub
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <!-- GoFundMe
+              <div class="usa-width-one-third">
+                <div class="usa-media_block">
                   <i class="fas fa-heart fa-2x usa-media_block-img"></i>
                   <div class="usa-media_block-body">
                     <h4>Support the project</h4>
@@ -125,6 +139,7 @@
                   </div>
                 </div>
               </div>
+            -->
               <div class="usa-width-one-third">
                 <div class="usa-media_block">
                   <i class="fas fa-envelope fa-2x usa-media_block-img"></i>
