--- a/app/templates/pages/about.html
+++ b/app/templates/pages/about.html
@@ -21,9 +21,11 @@
                 <li>
                     <a href="#sec4">Who maintains this project?</a>
                 </li>
+                <!-- GoFundMe
                 <li>
                     <a href="#sec5">How can I help?</a>
                 </li>
+                -->
                 <li>
                     <a href="#sec6">Related work</a>
                 </li>
@@ -130,6 +132,7 @@
         </p>
         <p></p>
 
+        <!-- GoFundMe
         <h2 id="sec5">How can I help?</h2>
         <p>
             The primary way to support the project is by offering financial
@@ -163,6 +166,7 @@
             If this work seems useful or interesting to you, please consider contributing
             to our active <a href="">GoFundMe campaign</a>. Thanks!
         </p>
+        -->
 
         <h2 id="sec6">Related work</h2>
         <p>
