Fix missing tag

--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -75,6 +75,7 @@
       </p>
       <p><a href="/national" class="usa-button cta">See the data</a></p>
     </div>
+  </div>
 </section>
 {% endblock %}
 
