--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -8,11 +8,13 @@
 
 {% block content %}
 <section>
-  <img src="/static/img/graphic-bg-city.svg" width="100%" height="200px" alt="Cityscape banner">
+  <div class="usa-grid-full">
+    <img src="/static/img/cityscape.png" style="width:100%;" alt="Cityscape banner">
+  </div>
 </section>
 
 <section class="usa-section">
-  <div class="usa-grid-full" id="sec1">
+  <div class="usa-grid-full">
     <div class="usa-width-one-third">
       <h2>Trust through Transparency</h2>
     </div>
@@ -30,7 +32,7 @@
   </div>
 </section>
 
-<section class="usa-section usa-section-secondary usa-graphic_list" id="sec2">
+<section class="usa-section usa-section-secondary usa-graphic_list">
   <div class="usa-grid-full usa-graphic_list-row">
     <div class="usa-width-one-half usa-media_block">
       <i class="fas fa-chart-bar fa-3x usa-media_block-img"></i>
@@ -77,7 +79,4 @@
     </div>
   </div>
 </section>
-{% endblock %}
-
-{% block js %}
 {% endblock %}
