--- a/app/templates/pages/about.html
+++ b/app/templates/pages/about.html
@@ -187,7 +187,7 @@
         <p>
             There are a number of projects that have similarities to OpenPDI, but
             all existing work either differs in scope (e.g., standardizing only traffic stop data)
-            or intent. Below you'll find a brief summary of other notable projects.
+            or intent. Below you'll find a summary of other notable projects.
         </p>
 
         <h3>Center for Policing Equity (CPE)</h3>
