--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -60,6 +60,22 @@
                             <a class="usa-nav-link" href="/about">About</a>
                         </li>
                         <li>
+                          <button class="usa-accordion-button usa-nav-link" aria-expanded="false" aria-controls="extended-nav-section-one">
+                              <span>Topics</span>
+                          </button>
+                          <ul id="extended-nav-section-one" class="usa-nav-submenu" aria-hidden="true">
+                              <li>
+                                  <a href="/ois">Officer-Involved Shootings</a>
+                              </li>
+                              <li>
+                                  <a href="#">Use of Force (coming soon!)</a>
+                              </li>
+                              <li>
+                                  <a href="#">Traffic Stops (coming soon!)</a>
+                              </li>
+                          </ul>
+                      </li>
+                        <li>
                             <a class="usa-nav-link" href="https://github.com/OpenPDI">GitHub</a>
                         </li>
                     </ul>
@@ -156,9 +172,7 @@
       <div class="footer-section-bottom">
         <div class="usa-grid-full">
           <p>
-            Made with <a href="https://designsystem.digital.gov/">USWDS</a>,
-            <a href="https://www.highcharts.com/">Highcharts</a> &amp;
-            <a href="https://palletsprojects.com/p/flask/">Flask</a> by @<a href="https://twitter.com/jdkato">jdkato</a>.
+            An open-source project by @<a href="https://twitter.com/jdkato">jdkato</a>.
           </p>
         </div>
       </div>
