--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -62,20 +62,26 @@
 <section class="usa-section">
   <div class="usa-grid-full usa-graphic_list-row">
     <div class="usa-width-one-half usa-media_block">
-      <h3 id="assessment">State-level data</h3>
+      <h3 id="assessment">Explore the data</h3>
       <p>
-        Browse state-specific data on officer-involved shootings, traffic stops,
-        use-of-force incidents, and more.
+        Browse data on <a href="/ois">officer-involved shootings</a>, traffic stops (coming soon!), use-of-force
+        incidents (coming soon!), and more.
       </p>
-      <p><a href="/state-entry" class="usa-button cta">Choose a state</a></p>
+      <a href="/about" class="usa-button usa-button-secondary cta">
+          Learn more <i class="fas fa-arrow-right align-center"></i>
+        </a>
     </div>
     <div class="usa-width-one-half usa-media_block">
-      <h3 id="customization">National-level data</h3>
+      <h3 id="customization">Create your own dataset</h3>
       <p>
-        Explore national-level data on officer-involved shootings, traffic
-        stops, use-of-force incidents, and more.
+        Get started with your own research by using our open-source Python
+        library to create your own dataset.
       </p>
-      <p><a href="/national" class="usa-button cta">See the data</a></p>
+      <p>
+        <a href="https://github.com/OpenPDI/openpdi" class="usa-button usa-button-secondary cta">
+          Learn more <i class="fas fa-arrow-right align-center"></i>
+        </a>
+      </p>
     </div>
   </div>
 </section>
