--- a/app/templates/pages/ois.html
+++ b/app/templates/pages/ois.html
@@ -92,10 +92,10 @@
     <div class="usa-grid-full">
       <h2 id="state-label">By state (Alaska)</h2>
         <p>
-            The map below indicates the number of shootings that have occurred in each
-            county, while the pie chart gives the number of shootings involving
-            certain races and ethnicities (Hispanic includes respondents of any
-            race; other categories are non-Hispanic).
+            The map below indicates the number of shootings that have occurred
+            in each county, while the pie chart gives the number of shootings
+            by race and ethnicity (Hispanic includes respondents of  any race;
+            other categories are non-Hispanic).
         </p>
         <p>
           Enter a state's name below to update the charts.
