Update old link

--- a/app/templates/pages/about.html
+++ b/app/templates/pages/about.html
@@ -128,7 +128,7 @@
             in the U.S.
         </p>
         <p>
-            For example, check out <a href="https://openpdi.org/states/TX">our page on Texas</a>.
+            For example, check out our page on <a href="https://openpdi.org/ois">officer-involved shootings</a>.
         </p>
 
         <h2 id="sec4">Who maintains this project?</h2>
