Update table styling

--- a/app/templates/pages/ois.html
+++ b/app/templates/pages/ois.html
@@ -7,7 +7,7 @@
 
 <!-- <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css" /> -->
 <!-- <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.css" type='text/css' /> -->
-<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/state.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/ois.css') }}">
 {% endblock %}
 
 {% block content %}
@@ -55,7 +55,7 @@
               Search the database
             </button>
             <div id="b-a1" class="usa-accordion-content">
-              <table id="database" class="usa-table-borderless" style="width:100%;">
+              <table id="database" class="usa-table-borderless">
                   <thead>
                     <tr>
                         <th>DATE</th>
