--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -41,7 +41,7 @@
             <a href="/"
               title="Home"
               aria-label="Home">
-                <img src="/static/img/PDI.svg" width="50" alt="OpenPDI logo" class="align-center mobile-hide"> OpenPDI
+                <img src="/static/img/PDI-white.svg" width="50" alt="OpenPDI logo" class="align-center mobile-hide"> OpenPDI
             </a>
           </em>
             </div>
@@ -68,21 +68,18 @@
                                   <a href="/ois">Officer-Involved Shootings</a>
                               </li>
                               <li>
-                                  <a href="#">Use of Force (coming soon!)</a>
+                                  <a href="/uof">Use of Force</a>
                               </li>
                               <li>
                                   <a href="#">Traffic Stops (coming soon!)</a>
                               </li>
                           </ul>
                       </li>
-                        <li>
-                            <a class="usa-nav-link" href="https://github.com/OpenPDI">GitHub</a>
-                        </li>
                     </ul>
                     <div class="usa-nav-secondary">
                         <ul class="usa-unstyled-list usa-nav-secondary-links">
                             <li>
-                                <a href="https://github.com/OpenPDI/openpdi.org/milestone/1">Roadmap</a>
+                                <a href="https://github.com/OpenPDI/"><i class="fab fa-github"></i> GitHub</a>
                             </li>
                             <!-- GoFundMe
                             <li>
@@ -90,7 +87,7 @@
                             </li>
                             -->
                             <li>
-                                <a href="mailto:info@openpdi.org">info@openpdi.org</a>
+                                <a href="mailto:info@openpdi.org"><i class="fas fa-envelope"></i> info@openpdi.org</a>
                             </li>
                         </ul>
                     </div>
