--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -64,8 +64,9 @@
     <div class="usa-width-one-half usa-media_block">
       <h3 id="assessment">Explore the data</h3>
       <p>
-        Browse data on <a href="/ois">officer-involved shootings</a>, traffic stops (coming soon!), use-of-force
-        incidents (coming soon!), and more.
+        Browse data on <a href="/ois">officer-involved shootings</a>,
+        <a href="/uof">use-of-force incidents</a>, traffic stops
+        (coming soon!), and more.
       </p>
       <a href="/about" class="usa-button usa-button-secondary cta">
           Learn more <i class="fas fa-arrow-right align-center"></i>
