--- a/app/templates/pages/uof.html
+++ b/app/templates/pages/uof.html
@@ -1,53 +1,19 @@
 {% extends 'layouts/main.html' %}
 
-{% block title %}OpenPDI{% endblock %}
+{% block title %}OpenPDI: Use of Force{% endblock %}
 
 {% block css %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.2/dist/jquery.fancybox.min.css" />
-<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/home.css') }}">
 {% endblock %}
 
 {% block content %}
 <section class="usa-section">
   <div class="usa-grid-full usa-grid-padded">
-      <div id="wrapper" class="usa-width-one-whole">
-          <h2>Traffic Stops</h2>
-          <p>
-            Stanford University's
-            <a href="https://openpolicing.stanford.edu/">Open Policing Project</a>
-            has collected and standardized over 130 million traffic stop records
-            from 31 state police agencies. This data includes information such
-            as stop date, reason, and location, which we've begun exploring
-            below.
-          </p>
-          <div id="traffic" class="map" style="width:100%;height:100%;"></div>
-          <p>
-            There are more than 50,000 traffic stops on a typical day in the
-            U.S. A plurality of these stops take place on Friday (~16.1%),
-            with speeding violations accounting for nearly half (~49%) of all
-            stops.
-          </p>
-      </div>
-        <div class="usa-width-one-half usa-grid-padded">
-          <div id="reasons"></div>
-      </div>
-      <div class="usa-width-one-half usa-grid-padded">
-        <div id="days"></div>
-      </div>
-  </div>
-
-  <div class="usa-grid-full">
-    <div class="usa-width-one-whole">
-      <p>
-        Stanford's analysis of this data can
-        <a href="https://openpolicing.stanford.edu/findings/">be found here</a>.
-      </p>
-    </div>
-  </div>
-
-  <div class="usa-grid-full usa-grid-padded">
     <div id="wrapper" class="usa-width-one-whole">
-      <h2>Use-of-Force (UoF) Incidents</h2>
+      <h1>
+        Use-of-Force Incidents
+        <span class="tag is-light is-large align-center">Updated: {{ updated }}</span>
+      </h1>
       <div class="usa-alert usa-alert-info">
         <div class="usa-alert-body">
           <h3 class="usa-alert-heading">Definition</h3>
@@ -60,23 +26,20 @@
         </div>
       </div>
       <p>
-        OpenPDI has
+        The OpenPDI project has
         <a href="https://github.com/OpenPDI/openpdi/tree/master/openpdi/meta/uof">standardized over 50,000</a>
-        UoF incident reports from data submitted to the
-        <a href="https://www.policedatainitiative.org/datasets/use-of-force/">Police Data Initiative</a>.
-        This gives us the opportunity to explore <i>why</i> and <i>how</i>
-        police officers are applying the Use of Force across the U.S.
+        use-of-force incident reports from data submitted to the
+        <a href="https://www.policedatainitiative.org/datasets/use-of-force/">Police Data Initiative</a> (PDI).
+        This gives us the opportunity to explore <i>why</i>, <i>how</i>, and <i>where</i>
+        police officers are using force across the U.S.
       </p>
-      <p>
-        33,385 of these reports specified a <i>reason</i> for using force,
-        as shown in the table below.
-      </p>
+
       <table id="table">
-        <caption>Reasons for using force (33,385 incidents)</caption>
+        <caption id="total-reasons">Reasons for using force ({{ total }} incidents)</caption>
         <thead>
           <tr>
-            <th scope="col">Reason</th>
-            <th>Example Column Entries</th>
+            <th scope="col">Category</th>
+            <th>Example Entries</th>
             <th scope="col">Percent of Incidents</th>
           </tr>
         </thead>
@@ -84,40 +47,36 @@
           <tr>
             <th scope="row">Resistance</th>
             <td>"resisting arrest", "necessary to effect arrest"</td>
-            <td>40.9</td>
+            <td>{{ freqs["RESISTANCE"] }}</td>
           </tr>
           <tr>
             <th scope="row">Active Aggression</th>
             <td>"assaulting citizen(s)", "subject combative", "battery on police officer"</td>
-            <td>27.2</td>
+            <td>{{ freqs["ACTIVE AGGRESSION"] }}</td>
           </tr>
           <tr>
             <th scope="row">Non-compliance</th>
             <td>"refuse verbal commands", "subject non compliant"</td>
-            <td>11.5</td>
+            <td>{{ freqs["NON-COMPLIANT"] }}</td>
           </tr>
           <tr>
           <tr>
             <th scope="row">Fleeing</th>
             <td>"fleeing", "flight from an officer", "escape"</td>
-            <td>5.2</td>
+            <td>{{ freqs["FLEEING"] }}</td>
           </tr>
             <th scope="row">Weapon Display</th>
             <td>"weapon display", "weapon exhibited"</td>
-            <td>3.9</td>
+            <td>{{ freqs["WEAPON DISPLAY"] }}</td>
           </tr>
           <tr>
             <th scope="row">Other</th>
             <td>"other", "to restrain for subjects safety", "in custody, maintaining control"</td>
-            <td>11.3</td>
+            <td>{{ freqs["OTHER"] }}</td>
           </tr>
         </tbody>
       </table>
-    </div>
-  </div>
 
-  <div class="usa-grid-full usa-grid-padded">
-    <div class="usa-width-one-whole">
       <p>
         Officers are typically trained to use the least amount of force necessary
         to "reduce the immediate threat," ranging from <i>No Force</i>
@@ -127,32 +86,25 @@
         the reasoning illustrated in the diagram below (courtesy of the
         <a href="http://useofforceproject.org/#project">Use of Force Project</a>).
       </p>
+
       <figure>
         <a data-fancybox="gallery" href="/static/img/uof.png"><img src="/static/img/uof.png" class="center" alt="Use of Force progression"></a>
         <figcaption class="text-center caption-text">Click to enlarge.</figcaption>
       </figure>
-      <p>
-        For example, the act of <i>Resistance</i>&mdash;the most commonly cited
-        reason for force in our dataset&mdash;would warrant "moderate force"
-        according to the diagram. Let's look at how officers from our dataset
-        responded to different subject behaviors.
-      </p>
-    </div>
-  </div>
 
-  <div class="usa-grid-full usa-grid-padded">
-    <div id="wrapper" class="usa-width-one-whole">
+      <p>
+        The chart below summarizes the type of force used in response to different
+        behaviors. The "Impact" category includes the use of non-lethal weapons
+        such as batons and bean bag rounds.
+      </p>
+
       <div id="uof-group" style="width:100%;height:100%;"></div>
       <p>
-        As you can see, <i>Physical</i> (an act of "moderate force") is the most
-        common type of force. <i>Firearm</i> (Deadly Force) is most commonly
-        applied when the subject displays a weapon (39%), fails to comply with
-        instructions (20%), or attempts to flee (18%).
-      </p>
-      <p>
-        See the National Police Foundation's
-        <a href="https://www.policefoundation.org/general-resources/use-of-force-infographic/">Use-of-Force Infographic</a>
-        for more information.
+        If you'd like to perform your own analysis, check out our
+        <a href="https://github.com/OpenPDI/openpdi">open-source Python library</a> for working
+        with data standardized by the OpenPDI project. For more general
+        information on the use of force, see the National Police Foundation's
+        <a href="https://www.policefoundation.org/general-resources/use-of-force-infographic/">infographic</a>.
       </p>
     </div>
   </div>
@@ -167,7 +119,8 @@
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/drilldown.js"></script>
 
-<script src="{{ url_for('static', filename='js/home/charts.js') }}"></script>
+<script src="{{ url_for('static', filename='js/uof/data.js') }}"></script>
+<script src="{{ url_for('static', filename='js/uof/charts.js') }}"></script>
 
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.2/dist/jquery.fancybox.min.js"></script>
 {% endblock %}
