--- a/app/templates/pages/ois.html
+++ b/app/templates/pages/ois.html
@@ -139,7 +139,11 @@
 
 <script src="//code.highcharts.com/maps/modules/map.js"></script>
 {% for state in states %}
-    <script src="https://code.highcharts.com/mapdata/countries/us/us-{{ state.lower() }}-all.js"></script>
+    {% if state == 'AK' %}
+        <script src="https://code.highcharts.com/mapdata/countries/us/us-{{ state.lower() }}-all.js"></script>
+    {% else %}
+        <script src="https://code.highcharts.com/mapdata/countries/us/us-{{ state.lower() }}-all.js" async></script>
+    {% endif %}
 {% endfor %}
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/awesomplete/1.1.3/awesomplete.min.js"></script>
