--- a/app/templates/pages/about.html
+++ b/app/templates/pages/about.html
@@ -3,7 +3,7 @@
 {% block title %}OpenPDI{% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.2/dist/jquery.fancybox.min.css" />
+<link rel="stylesheet" href="{{ url_for('static', filename='vendor/FancyBox/jquery.fancybox.min.css') }}" />
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/about.css') }}">
 {% endblock %}
 
@@ -223,5 +223,5 @@
 {% endblock %}
 
 {% block js %}
-<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.2/dist/jquery.fancybox.min.js"></script>
+<script src="{{ url_for('static', filename='vendor/FancyBox/jquery.fancybox.min.js') }}"></script>
 {% endblock %}
