Drop publications link

--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -47,7 +47,7 @@
         <h3>Open Source</h3>
         <p>
           Our <a href="https://github.com/OpenPDI/openpdi">source code</a>,
-          <a href="https://github.com/OpenPDI/research">publications</a>, and
+          <a href="https://github.com/OpenPDI/openpdi.org/tree/master/app/static/data">data</a>, and
           <a href="https://github.com/OpenPDI/openpdi.org">website</a> are all
           open source and available on GitHub.
         </p>
