style: revert back to white header

--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -40,7 +40,7 @@
             <a href="/"
               title="Home"
               aria-label="Home">
-                <img src="/static/img/PDI-white.svg" width="50" alt="OpenPDI logo" class="align-center mobile-hide"> OpenPDI
+                <img src="/static/img/PDI.svg" width="50" alt="OpenPDI logo" class="align-center mobile-hide"> OpenPDI
             </a>
           </em>
             </div>
