content: Update OIS title

--- a/app/templates/pages/ois.html
+++ b/app/templates/pages/ois.html
@@ -22,7 +22,7 @@
 <section class="usa-section">
     <div class="usa-grid-full">
         <h1 id="state-title">
-            Fatal officer-involved shootings
+            Officer-Involved Shootings
             <span class="tag is-light is-large align-center">Updated: {{ updated }}</span>
         </h1>
         <div class="usa-alert usa-alert-info" >
