--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,46 +1,40 @@
 {{ define "main" }}
-<section class="space-lg bg-dark overflow-hidden">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-12 col-md-6 mb-5 mb-md-0 position-relative">
-                <h1 class="display-4">Trust through transparency</h1>
+<section class="bg-darkish overflow-hidden">
+    <img alt="Image" src="/img/graphic-bg-clouds-5.png" class="bg-image" />
+    <div class="container-lg">
+        <div class="row justify-content-center">
+            <div class="col-8 text-center">
+                <!-- Heading -->
+                <h1 class="display-3 mb-4 text-white">
+                    <span class="text-underline-warning">Open</span>PDI
+                </h1>
+                <!-- TODO: add video? -->
                 <p class="lead">
                     The <b>OpenPDI</b> project is an open-source effort to aggregate, standardize,
                     and present data on police activity in the U.S.
                 </p>
-                <p class="lead">
-                    Our goal is to make it easier for journalists, researchers, and citizens to
-                    explore police-related data at the county, state, and national level.
-                </p>
-                <a href="https://themes.getbootstrap.com/product/wingman-landing-page-app-template" class="btn btn-lg btn-success">Get the code</a>
-                <a href="pages-landing.html" class="btn btn-lg btn-link text-white">Explore the data <i class="icon-chevron-right"></i></a> </div>
-            <!--end of col-->
-            <div class="col-12 col-md-6">
-                <div class="main-carousel overflow-visible" data-flickity='{ "cellAlign": "center", "contain": true, "prevNextButtons": false, "pageDots":true, "wrapAround":true, "autoPlay":5000, "imagesLoaded":true, "initialIndex":3, "draggable":false }'>
-                    <div class="carousel-cell col-11">
-                        <div class="card card-sm bg-gradient border-0">
-                            <a href="https://github.com/OpenPDI"> <img class="card-img-top" src="/img/overview/github.png" alt="Landing - One"> </a>
-                            <div class="card-footer d-flex justify-content-between bg-white"> <a href="https://github.com/OpenPDI" class="h6 m-0">100% open source &amp; reproducible</a> <a target="_blank" href="landing-1.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a> </div>
-                        </div>
-                    </div>
-                    <div class="carousel-cell col-11">
-                        <div class="card card-sm bg-gradient border-0">
-                            <a href="landing-2.html"> <img class="card-img-top" src="/img/overview/colab.png" alt="Landing - Two"> </a>
-                            <div class="card-footer d-flex justify-content-between bg-white"> <a href="landing-2.html" class="h6 m-0">Leverage modern research tooling</a> <a target="_blank" href="landing-2.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a> </div>
-                        </div>
-                    </div>
-                </div>
+                <!-- Button -->
+                <a href="#" class="btn btn-lg btn-success">Get the code</a>
+                <a href="#" class="btn btn-lg btn-link text-white">Explore the data <i class="icon-chevron-right"></i></a>
             </div>
-            <!--end of col-->
         </div>
-        <!--end of row-->
     </div>
-    <!--end of container-->
-    </section>
-    <!--end of section-->
-    <section class="bg-white">
+</section>
+
+<section class="bg-white">
     <div class="container">
-        <div class="row justify-content-center text-center section-intro">
+        <div class="row justify-content-center text-center">
+            <div class="col-12 col-md-9 col-lg-8">
+                <span class="title-decorative" data-aos="fade-up" data-aos-delay="10">What do we do?</span>
+                <h2 class="display-4" data-aos="fade-up" data-aos-delay="100">Trust though transparency</h2>
+                <span class="lead" data-aos="fade-up" data-aos-delay="200">
+                    In May 2015, the White House launched the
+                    <a href="https://www.policedatainitiative.org/">Police Data Initiative</a>
+                    (PDI) in an effort to encourage law enforcement agencies to release data
+                    on their interactions with the communities they serve.
+                </span>
+            </div>
+            <!--
             <div class="col-12">
                 <span class="lead">
                     In May 2015, the White House launched the <a href="https://www.policedatainitiative.org/">Police Data Initiative (PDI)</a> in an effort
@@ -54,12 +48,15 @@
                     data on police activity in the U.S.
                 </span>
             </div>
+        -->
         <!--end of col-->
         </div>
-        <!--end of row-->
+        <div id="arcs" data-aos-id="chart" data-aos="fade-up" style="position: relative; width: 100%; height: 50%;">
+        </div>
     </div>
     <!--end of container-->
-    </section>
+</section>
+
     <!--end of section-->
     <section class="bg-white">
     <div class="container">
@@ -222,4 +219,81 @@
     </div>
     <!--end of container-->
 </section>
+{{ end }}
+
+{{ define "script" }}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.6/proj4.js"></script>
+<script src="https://code.highcharts.com/maps/highmaps.js"></script>
+<script src="https://code.highcharts.com/maps/modules/data.js"></script>
+<script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>
+<script src="https://code.highcharts.com/mapdata/countries/us/us-all.js"></script>
+
+
+<script type="text/javascript">
+var H = Highcharts, map = H.maps['countries/us/us-all'], chart;
+
+var options = {
+    title: {
+        text: null
+    },
+    legend: {
+        enabled: false
+    },
+    exporting: false,
+    credits: false,
+    tooltip: {
+        enabled: false,
+        pointFormat: '{point.capital}, {point.parentState}<br>' +
+            'Lat: {point.lat}<br>' +
+            'Lon: {point.lon}<br>' +
+            'Population: {point.population}'
+    },
+    xAxis: {
+        crosshair: null
+    },
+    yAxis: {
+        crosshair: null
+    },
+    series: [{
+        name: 'Basemap',
+        mapData: map,
+        borderColor: '#606060',
+        nullColor: 'rgba(200, 200, 200, 0.2)',
+        showInLegend: false
+    }, {
+        name: 'Separators',
+        type: 'mapline',
+        data: H.geojson(map, 'mapline'),
+        color: '#101010',
+        enableMouseTracking: false,
+        showInLegend: false
+    }]
+};
+
+chart = Highcharts.mapChart('arcs', options);
+document.addEventListener('aos:in:chart', ({ detail }) => {
+    Highcharts.getJSON('https://cdn.jsdelivr.net/gh/highcharts/highcharts@v7.0.0/samples/data/us-capitals.json', function (json) {
+        var data = [];
+        json.forEach(function (p) {
+            p.z = p.population;
+            data.push(p);
+        });
+
+        options.series.push({
+            type: 'mapbubble',
+            dataLabels: {
+                enabled: true,
+                format: '{point.capital}'
+            },
+            name: null,
+            data: data,
+            maxSize: '12%',
+            color: H.getOptions().colors[0]
+        });
+
+        chart = Highcharts.mapChart('arcs', options);
+    });
+});
+</script>
 {{ end }}
