--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,10 +1,9 @@
 <div class="navbar-container">
     <div class="bg-dark navbar-dark" data-sticky="top">
     <div class="container">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-md">
         <a class="navbar-brand" href="index.html">
-            <img alt="Wingman" src="/img/logos/PDI-alt.svg" width="50"/>
-            OpenPDI
+            <img alt="Wingman" src="/img/logos/PDI-alt.svg" width="42"/>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <i class="icon-menu h4"></i>
